--- a/sampledocs/bookmap/bookmap.ditamap
+++ b/sampledocs/bookmap/bookmap.ditamap
@@ -6,7 +6,7 @@
         <mainbooktitle>Sample Simple Bookmap</mainbooktitle>
 <booktitlealt>*alternate* *title*</booktitlealt>
     </booktitle>
-<frontmatter>
+<frontmatter id="frontm">
 <booklists>
 <toc/>
 <figurelist/>
@@ -28,7 +28,7 @@
 <topicref href="generic.dita" copy-to="subfrontmtopic.dita"/>
 </topicref>
 </frontmatter>
-<part href="part1.dita">
+<part href="part1.dita" id="part1">
 <chapter href="part1chap1.dita">
 <topicref href="generic.dita" copy-to="a.dita"/>
 <topicref href="generic.dita" copy-to="b.dita"/>
@@ -38,7 +38,7 @@
 <topicref href="generic.dita" copy-to="d.dita"/>
 </chapter>
 </part>
-<part href="part2.dita">
+<part href="part2.dita" id="part2">
 <chapter href="part2chap1.dita">
 <topicref href="generic.dita" copy-to="e.dita"/>
 <topicref href="generic.dita" copy-to="f.dita"/>
@@ -49,16 +49,16 @@
 </chapter>
 </part>
 <appendices href="appendices.dita">
-<appendix href="appendix1.dita">
+<appendix href="appendix1.dita" id="app1">
 <topicref href="generic.dita" copy-to="subapp1a.dita"/>
 <topicref href="generic.dita" copy-to="subapp1b.dita"/>
 </appendix>
-<appendix href="appendix2.dita">
+<appendix href="appendix2.dita" id="app2">
 <topicref href="generic.dita" copy-to="subapp2a.dita"/>
 <topicref href="generic.dita" copy-to="subapp2b.dita"/>
 </appendix>
 </appendices>
-<backmatter>
+<backmatter id="backm">
 <amendments href="amendments.dita"/>
 <booklists>
 <abbrevlist/>
