--- a/sampledocs/bookmap/bookmap-chappart.ditamap
+++ b/sampledocs/bookmap/bookmap-chappart.ditamap
@@ -6,11 +6,82 @@
         <mainbooktitle>Mix top level chapters + parts</mainbooktitle>
 <booktitlealt>*alternate* *title*</booktitlealt>
     </booktitle>
-<frontmatter id="frontm" conref="bookmap.ditamap#frontm"/>
-<chapter conref="bookmap-chaps.ditamap#chap1"/>
-<chapter conref="bookmap-chaps.ditamap#chap2"/>
-<part conref="bookmap.ditamap#part1"/>
-<part conref="bookmap.ditamap#part2"/>
-<appendices id="apps" conref="bookmap.ditamap#apps"/>
-<backmatter id="backm" conref="bookmap.ditamap#backm"/>
+<!--<frontmatter id="frontm" conref="bookmap.ditamap#frontm"/>-->
+<frontmatter id="frontm">
+<booklists>
+<toc/>
+<figurelist/>
+<tablelist/>
+<booklist href="frontmatterlist.dita"/>
+</booklists>
+<preface href="preface.dita">
+<topicref href="generic.dita" copy-to="subpreface.dita"/>
+</preface>
+<bookabstract href="abstract.dita"/>
+<dedication href="dedication.dita"/>
+<draftintro href="draftintro.dita">
+<topicref href="generic.dita" copy-to="subdraftintro.dita"/>
+</draftintro>
+<notices href="notices.dita">
+<topicref href="generic.dita" copy-to="subnotices.dita"/>
+</notices>
+<topicref href="frontmtopic.dita">
+<topicref href="generic.dita" copy-to="subfrontmtopic.dita"/>
+</topicref>
+</frontmatter>
+<!--<chapter conref="bookmap-chaps.ditamap#chap1"/><chapter conref="bookmap-chaps.ditamap#chap2"/>-->
+<chapter href="chapter1.dita" id="chap1">
+<topicref href="generic.dita" copy-to="a.dita"/>
+<topicref href="generic.dita" copy-to="b.dita"/>
+</chapter>
+<chapter href="chapter2.dita" id="chap2">
+<topicref href="generic.dita" copy-to="a.dita"/>
+<topicref href="generic.dita" copy-to="b.dita"/>
+</chapter>
+<!--<part conref="bookmap.ditamap#part1"/><part conref="bookmap.ditamap#part2"/>-->
+<part href="part1.dita" id="part1">
+<chapter href="part1chap1.dita">
+<topicref href="generic.dita" copy-to="a.dita"/>
+<topicref href="generic.dita" copy-to="b.dita"/>
+</chapter>
+<chapter href="part1chap2.dita">
+<topicref href="generic.dita" copy-to="c.dita"/>
+<topicref href="generic.dita" copy-to="d.dita"/>
+</chapter>
+</part>
+<part href="part2.dita" id="part2">
+<chapter href="part2chap1.dita">
+<topicref href="generic.dita" copy-to="e.dita"/>
+<topicref href="generic.dita" copy-to="f.dita"/>
+</chapter>
+<chapter href="part2chap2.dita">
+<topicref href="generic.dita" copy-to="g.dita"/>
+<topicref href="generic.dita" copy-to="h.dita"/>
+</chapter>
+</part>
+<appendices href="appendices.dita" id="apps">
+<appendix href="appendix1.dita" id="app1">
+<topicref href="generic.dita" copy-to="subapp1a.dita"/>
+<topicref href="generic.dita" copy-to="subapp1b.dita"/>
+</appendix>
+<appendix href="appendix2.dita" id="app2">
+<topicref href="generic.dita" copy-to="subapp2a.dita"/>
+<topicref href="generic.dita" copy-to="subapp2b.dita"/>
+</appendix>
+</appendices>
+<backmatter id="backm">
+<amendments href="amendments.dita"/>
+<booklists>
+<abbrevlist/>
+<bibliolist/>
+<glossarylist/>
+<booklist href="backmatterlist.dita"/>
+<indexlist/>
+</booklists>
+<colophon href="colophon.dita"/>
+<topicref href="backmtopic.dita">
+<topicref href="generic.dita" copy-to="subbackmtopic.dita"/>
+</topicref>
+</backmatter>
+<!--<appendices id="apps" conref="bookmap.ditamap#apps"/><backmatter id="backm" conref="bookmap.ditamap#backm"/>-->
 </bookmap>
