--- a/sampledocs/bookmap/figlist.dita
+++ b/sampledocs/bookmap/figlist.dita
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="topic_ipx_yzq_dw">
-  <title>List file: TOC</title>
+  <title>List file: Figure list</title>
 <shortdesc>This is topic that is referenced from an element inside the book lists; in this case, the
-TOC</shortdesc>
+figure list</shortdesc>
   <body>
     <p>It's a "list" file. Let's use a list:</p>
 <ul>
-<li id="li">TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC
-TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC
-TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC
-TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC
-TOC TOC TOC TOC TOC TOC TOC TOC TOC TOC </li>
+<li id="li">FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG
+FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG
+FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG
+FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG
+FIG FIG FIG FIG FIG FIG FIG FIG FIG FIG </li>
 <li conref="#./li"/>
 <li conref="#./li"/>
 <li conref="#./li"/>
